--- a/res/xml/widget_provider.xml
+++ b/res/xml/widget_provider.xml
@@ -1,6 +1,6 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
   android:minWidth="250dip"
-  android:minHeight="72dip"
+  android:minHeight="100dp"  
   android:updatePeriodMillis="900000"
   android:initialLayout="@layout/widget"
 />
