--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -4,27 +4,13 @@
     android:layout_height="fill_parent"
     android:background="#F2F2F2" >
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:background="#F2F2F2" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="60dp"
-            android:background="#F2F2F2"
-            android:padding="20dp"
-            android:text="Legenda"
-            android:textColor="#333333" />
 
         <TableLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/tableLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_marginBottom="40dp"
+            android:paddingBottom="20dp"
             android:layout_weight="1"
             android:background="#F2F2F2" >
 
@@ -121,11 +107,9 @@
 
                 <TextView
                     android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_height="100dp"
                     android:text="Uwaga! Bardzo wysoki poziom zanieczyszczenia. Unikaj przebywania w pobliżu ruchliwych ulic, odradza się aktywność fizyczną na otwartym powietrzu."
                     android:textColor="#333333" />
             </TableRow>
         </TableLayout>
-    </LinearLayout>
-
 </ScrollView>
