--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -88,7 +88,7 @@
                 <TextView
                     android:layout_width="80dp"
                     android:layout_height="120dp"
-                    android:text="Ostrzegamy, poziom zanieczyszczenia powietrza jest wysoki; długotrwałe przebywanie oraz aktywność ruchowa na otwartym powietrzu wskazana tylko dla osób zdrowych"
+                    android:text="Ostrzegamy, poziom zanieczyszczenia powietrza jest wysoki; długotrwałe przebywanie oraz aktywność ruchowa na otwartym powietrzu wskazana tylko dla osób zdrowych."
                     android:textColor="#333333" />
             </TableRow>
 
