--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -1,18 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#F2F2F2" >
+    android:orientation="vertical" >
 
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#F2F2F2"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textViewHeader"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Aktualny poziom zanieczyszczenia powietrza w Warszawie (PM 10):"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#333333" />
+
+        <LinearLayout
+            android:id="@+id/LinearLayoutKomunikacyjna"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textViewKomunikacyjna"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:text="Warszawa-Komunikacyjna:"
+                android:textColor="#333333" />
+
+            <TextView
+                android:id="@+id/textViewKomunikacyjnaValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#333333" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/LinearLayoutTargowek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textViewTargowek"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:text="Targówek:"
+                android:textColor="#333333" />
+
+            <TextView
+                android:id="@+id/textViewTargowekValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#333333" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/LinearLayoutUrsynow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textViewUrsynow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:text="Ursynów:"
+                android:textColor="#333333" />
+
+            <TextView
+                android:id="@+id/textViewUrsynowValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#333333" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#F2F2F2"
+        android:fillViewport="true" >
 
         <TableLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/tableLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:paddingBottom="20dp"
             android:layout_weight="1"
-            android:background="#F2F2F2" >
+            android:background="#F2F2F2"
+            android:paddingBottom="20dp" >
 
             <TableRow
                 android:id="@+id/tableRow1"
@@ -112,4 +195,6 @@
                     android:textColor="#333333" />
             </TableRow>
         </TableLayout>
-</ScrollView>
+    </ScrollView>
+
+</LinearLayout>
